# project-learning

./: .gitignore  .trivyignore  Makefile  README-LOCUST.md  README-TRIVY.md  README.md  api_client.py  docker-compose.locust.yml  docker-compose.trivy.yml  pyproject.toml
github/workflows/: trivy-scan.yml
locust/: Dockerfile  locust.conf  locustfile.py  locustfile_mixed.py  locustfile_projects.py  locustfile_users.py
locust-reports/: headless_stats.csv  headless_stats_history.csv
locust/locust-reports/: report_stats.csv  report_stats_history.csv
scripts/: generate-locust-report.py  run-locust.ps1  run-locust.sh  scan-security.sh  scan-with-compose.sh  trivy-scan.py
tests/: conftest.py  run_all_tests.py  test_accessibility.py  test_crud_operations.py  test_performance.py  test_projects.py  test_submissions.py  test_tasks.py  test_teammembers.py  test_teams.py  test_users.py
trivy-reports/: trivy_20260318_141718.json
